# cpp2c

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  main.py  notes.md  run_test.py  run_tests.sh
docker/: Dockerfile
evaluation/: .gitignore  Pipfile  README.md  abstractometer.py  aggregate_all_stats.py  aggregate_program_stats.py  clang_tools.py  clear_ignore.sh  compile_command.py  evaluate-bc.sh  evaluate-gzip.sh  evaluate-lua.sh  evaluate-redis.sh  evaluate-remind.sh  evaluate-tiny-HMAC.sh  evaluate-tiny-lint.sh  evaluate-tiny-regex.sh  evaluation_programs.py  gen-latex.py  gen_latex.py  reset-evaluation.sh  run-evaluation.py  run-evaluation.sh  run_evaluation.py  summaries.py  test_evaluation_programs.py
generate_test_cases/: generate_binary_op_macros.py
implementation/: .gitignore  CMakeLists.txt  README.md  build.sh  docker-container.sh
implementation/src/: CMakeLists.txt  CSubsetContainsLocalVars.h  CSubsetContainsVars.h  CSubsetFindLastDefinedVar.h  CSubsetHasSideEffects.h  CSubsetInMacroForestExpansionCollector.h  CSubsetInSourceRangeCollectionCollector.h  CSubsetVisitor.h  CollectDeclNamesVisitor.cc  CollectDeclNamesVisitor.hh  Constants.h  Cpp2C.cc  ExpansionUtils.cc  ExpansionUtils.h  ExpansionUtils.hh  ForestCollector.cc  ForestCollector.hh  MacroArgument.cc  MacroArgument.hh  MacroExpansionNode.cc  MacroExpansionNode.hh  MacroForest.cc  MacroForest.h  MacroForest.hh  MacroNameCollector.cc  MacroNameCollector.h  MacroNameCollector.hh  Matchers.h  Matchers.hh  NodeCollector.hh  SourceRangeCollection.cc  SourceRangeCollection.hh  TransformedDefinition.cc  TransformedDefinition.h  TransformedDefinition.hh
implementation/src/AnnotationPrinter/: AnnotationPrinterConsumer.cc
implementation/src/AnnotationRemover/: AnnotationRemoverConsumer.cc
implementation/src/Callbacks/: ForestCollector.cc  IncludeCollector.cc  MacroNameCollector.cc
implementation/src/Cpp2C/: Cpp2CAction.cc
implementation/src/CppSig/: CppSigUtils.cc  MacroArgument.cc  MacroExpansionNode.cc  MacroForest.cc
implementation/src/Deduplicator/: DeduplicatorConsumer.cc
implementation/src/Transformer/: Properties.cc  TransformedDefinition.cc  TransformerAction.cc  TransformerConsumer.cc
implementation/src/Utils/: ExpansionUtils.cc  SourceRangeCollection.cc  TransformedDeclarationAnnotation.cc
implementation/src/Utils/Logging/: TransformerMessages.cc
implementation/src/Visitors/: CollectCpp2CAnnotatedDeclsVisitor.cc  CollectDeclNamesVisitor.cc  CollectReferencingDREs.cc  DeanonymizerVisitor.cc  DeclRangeVisitor.cc  DeclRefExprAndCallExprDDVisitor.cc  ForwardDeclDDVisitor.cc  FunctionDefinitionDDVisitor.cc  MacroTransformationMapperVisitor.cc
macro-data-collector/: collect_macro_data.py  constants.py  notes.md  run_test.sh  test-result.json
macro_classifier/: clang_utils.py  classifications.py  classify_macros.py  inferences.py  macro_classification.py  macro_inferences.py
macro_data_collector/: classifications.py  classify_macros.py  collect_macro_data.py  constants.py  directives.py  main.py  run_test.sh
macro_fact_collector/: collect_macro_facts.py  macro_facts.py
proof-of-soundness/: c-subset-syntax.v
proof_of_soundness/: #ConfigVars.v#  .ConfigVars.aux  .CoqMakefile.d  .EvalRules.aux  .Syntax.aux  .Theorems.aux  .Transformations.aux  .gitignore  .makefile.d  .syntax.aux  ConfigVars.glob  ConfigVars.v  ConfigVars.vo  Constant.v  CoqMakefile.conf  EvalRules.glob  EvalRules.v  EvalRules.vo  Makefile  Makefile.coq  MapLemmas.v  MapTheorems.v  NoCallsFromFunctionTable.v  NoMacroInvocations.v  NoVarsInEnvironment.v  NotContainsVar.v  README.md  SchemaExample.v  Semantics.v  SideEffects.v  Syntax.glob  Syntax.v  Syntax.vo  Theorems.glob  Theorems.v  Theorems.vo  Theorems2.v  Transformation.v  Transformations.glob  Transformations.v  (+4 more)
tests/: __init__.py  simple_constants.txt  test_clang_utils.py  test_classify_macros.py  test_collect_macro_data.py
transformation_grammars/: base_grammar.txt  constant_object_macros.md
transformation_tool/: .gitignore  CMakeLists.txt  README.md  docker-container.sh
transformation_tool/docker/: Dockerfile
transformation_tool/src/: CMakeLists.txt  CSubsetContainsLocalVars.h  CSubsetContainsVars.h  CSubsetExpansionASTRootsCollector.h  CSubsetExprAndSubExprsSpelledInRanges.h  CSubsetExprInCSubset.h  CSubsetHasSideEffects.h  CSubsetInMacroForestExpansionCollector.h  CSubsetInSourceRangeCollectionCollector.h  CSubsetVisitor.h  CollectDeclNamesVisitor.h  Constants.h  Cpp2C.cc  CppToC.cc  ExpansionUtils.h  MacroForest.h  TransformedDefinition.h
transformation_tool/tests/: BinExpr.c  CallOrInvocation.c  IfElse.c  Num.c  ParenExpr.c  UnExpr.c  Var.c  foo_bar.c  function_like_macro_0_args_body_const_expr_1.c  function_like_macro_0_args_body_const_expr_2.c  function_like_macro_0_args_body_const_expr_3.c  function_like_macro_0_args_body_literal_1.c  function_like_macro_0_args_body_literal_1_name_already_exists.c  function_like_macro_0_args_body_literal_2.c  global_var.c  hygiene.c  local_global_var.c  local_var.c  nested_macros.c  object_like_and_function_like_macros_body_const_expr.c  object_like_macro_body_literal.c  object_like_macro_body_literal_2.c  object_like_macro_body_literal_invoked_in_constant_expression.c  object_like_macro_stmt_expr.c  unary-macro.c  unary_macro.c  unified_transformations.c
transformation_tool/wrappers/: CMakeLists.txt  cpp-to-c.in  cpp2c.in
triads/: README.md  addititive_expressions.yaml  and_expressions.yaml  assignment_expressions.yaml  binary_expressions.yaml  binary_numbers.yaml  boolean_expressions.yaml  cast_expressions.yaml  char_literals.yaml  chars.yaml  chars_prefixes.yaml  compound_string_literals.yaml  conditional_expressions.yaml  constant_expressions.yaml  constants.yaml  constants_chars.yaml  constants_chars_integers.yaml  constants_integers.yaml  count_triads.py  decimal_numbers.yaml  declaration_specs.yaml  declarators.yaml  equality_expressions.yaml  exclusive_or_expressions.yaml  expressions.yaml  floats.yaml  floats_decimal_points.yaml  floats_suffixes.yaml  grammar.ebnf  hex_numbers.yaml  (+22 more)
(+192 files in other folders)
